syntax = "proto3";
package ipsec;

/* Cryptographic algorithm for encryption */
enum CryptoAlg {
    NONE_CRYPTO = 0;
    AES_CBC_128 = 1;
    AES_CBC_192 = 2;
    AES_CBC_256 = 3;
}
/* Cryptographic algorithm for authentication */
enum IntegAlg {
    NONE_INTEG = 0;
    MD5_96 = 1;
    SHA1_96 = 2;
    SHA_256_96 = 3;
    SHA_256_128 = 4;
    SHA_384_192 = 5;
    SHA_512_256 = 6;
}

/* Tunnel Interface */
message TunnelInterface {
    string name = 1;                    /* Tunnel name */
    bool esn = 2;                       /* Extended sequence number */
    bool anti_replay = 3;               /* Anti replay option */

    string local_ip = 4;                /* Local IP address */
    string remote_ip = 5;               /* Remote IP address */
    uint32 local_spi = 6;               /* Local security parameter index */
    uint32 remote_spi = 7;              /* Remote security parameter index */

    CryptoAlg crypto_alg = 8;           /* Encryption algorithm type */
    string local_crypto_key = 9;
    string remote_crypto_key = 10;

    IntegAlg integ_alg = 11;            /* Authentication algorithm type */
    string local_integ_key = 12;
    string remote_integ_key = 13;

    bool enabled = 100;                 /* Enable/disable IPSec tunnel interface */
    repeated string ip_addresses = 101; /* Set of interface IP addresses */
    uint32 vrf = 102;                   /* Set virtual routing and forwarding */
}

/* Security Policy Database (SPD) */
message SecurityPolicyDatabase {
    string index = 1;                           /* Numerical security policy database index, serves as a unique identifier */

    message Interface {
        string name = 1;                        /* Name of the related interface */
    }
    repeated Interface interfaces = 2;          /* List of interfaces belonging to this SPD */

    message PolicyEntry {
        string sa_index = 1;                    /* Security association index */

        int32 priority = 2;
        bool is_outbound = 3;

        string remote_addr_start = 4;
        string remote_addr_stop = 5;
        string local_addr_start = 6;
        string local_addr_stop = 7;

        uint32 protocol = 8;

        uint32 remote_port_start = 9;
        uint32 remote_port_stop = 10;
        uint32 local_port_start = 11;
        uint32 local_port_stop = 12;

        enum Action {
            BYPASS = 0;
            DISCARD = 1;
            RESOLVE = 2;                        /* Note: this particular action is unused in VPP */
            PROTECT = 3;
        }
        Action action = 13;
    }
    repeated PolicyEntry policy_entries = 3;    /* List of policy entries belonging to this SPD */
}

/* Security Association (SA) */
message SecurityAssociation {
    string index = 1;               /* Numerical security association index, serves as a unique identifier */
    uint32 spi = 2;                 /* Security parameter index */

    enum IPSecProtocol {
        AH = 0;                     /* Authentication Header, provides a mechanism for authentication only */
        ESP = 1;                    /* Encapsulating Security Payload is for data confidentiality and authentication */
    }
    IPSecProtocol protocol = 3;

    CryptoAlg crypto_alg = 4;       /* Encryption algorithm type */
    string crypto_key = 5;

    IntegAlg integ_alg = 6;         /* Authentication algorithm type */
    string integ_key = 7;

    bool use_esn = 8;               /* Use extended sequence number */
    bool use_anti_replay = 9;       /* Use anti replay */

    string tunnel_src_addr = 10;
    string tunnel_dst_addr = 11;

    bool enable_udp_encap = 12;     /* Enable UDP encapsulation for NAT traversal */
}
